deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study
  namespace: app
  labels:
    app.kubernetes.io/name: study
spec:
  selector:
    app.kubernetes.io/name: study
  ports:
    - name: http
      port: 80
      targetPort: 8080
