deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: study
  namespace: app
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-system
      sectionName: https-wildcard
  hostnames:
    - study.ggang.cloud
  rules:
    - backendRefs:
        - name: study
          port: 80
